--- a/src/components/audioVisualizer.css
+++ b/src/components/audioVisualizer.css
@@ -1,5 +1,11 @@
 .glow {
-    -webkit-box-shadow:0px 0px 29px 4px rgba(45,255,196,1);
-    -moz-box-shadow: 0px 0px 29px 4px rgba(45,255,196,1);
-    box-shadow: 0px 0px 29px 4px rgba(45,255,196,1);
+    -webkit-box-shadow:0px 0px 14px 2px rgba(45,255,196,1);
+    -moz-box-shadow: 0px 0px 14px 2px rgba(45,255,196,1);
+    box-shadow: 0px 0px 14px 2px rgba(45,255,196,1);
+}
+
+.glow-pink {
+    -webkit-box-shadow:0px 0px 14px 2px rgb(255, 45, 174);
+    -moz-box-shadow: 0px 0px 14px 2px rgb(255, 45, 174);
+    box-shadow: 0px 0px 14px 2px rgb(255, 45, 174);
 }
